[gd_scene load_steps=7 format=3 uid="uid://cis5vwb328213"]

[ext_resource type="Script" uid="uid://ckibdm6xehsqe" path="res://scripts/GameManager.gd" id="1_h4n2p"]
[ext_resource type="PackedScene" path="res://scenes/Ground.tscn" id="2_ground"]
[ext_resource type="PackedScene" uid="uid://b8c1yw3mplae6" path="res://assets/tiles/Models/DAE format/tree_fat.dae" id="2_rarhs"]
[ext_resource type="PackedScene" uid="uid://bcnrnauln4qwj" path="res://assets/tiles/Models/DAE format/rock_smallC.dae" id="3_c01mt"]
[ext_resource type="Script" uid="uid://cgdfud7xovi6v" path="res://scripts/CameraController.gd" id="3_camera"]
[ext_resource type="PackedScene" uid="uid://v2214krpn6u3" path="res://assets/tiles/Models/FBX format/rock_tallJ.fbx" id="4_nxtc6"]

[node name="Main" type="Node3D"]

[node name="GameManager" type="Node3D" parent="."]
script = ExtResource("1_h4n2p")

[node name="tree_fat" parent="GameManager" instance=ExtResource("2_rarhs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.52, 0, 1.605)

[node name="tree_fat2" parent="GameManager" instance=ExtResource("2_rarhs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.548, 1.11759e-08, -1.779)

[node name="tree_fat3" parent="GameManager" instance=ExtResource("2_rarhs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.04976, -0.0276871, -0.226526)

[node name="tree_fat4" parent="GameManager" instance=ExtResource("2_rarhs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.83, 0, 3.446)

[node name="tree_fat5" parent="GameManager" instance=ExtResource("2_rarhs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.19871, 0, 2.31503)

[node name="tree_fat6" parent="GameManager" instance=ExtResource("2_rarhs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.52, 0, -2.99637)

[node name="tree_fat7" parent="GameManager" instance=ExtResource("2_rarhs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.00522, 0, -3.53046)

[node name="tree_fat8" parent="GameManager" instance=ExtResource("2_rarhs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.95634, 0, 0.841716)

[node name="tree_fat9" parent="GameManager" instance=ExtResource("2_rarhs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.679814, 0, 1.605)

[node name="tree_fat10" parent="GameManager" instance=ExtResource("2_rarhs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.47571, 0, 3.87512)

[node name="tree_fat11" parent="GameManager" instance=ExtResource("2_rarhs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.52, 0, -0.552623)

[node name="rock_smallC" parent="GameManager" instance=ExtResource("3_c01mt")]
transform = Transform3D(2.7, 0, 0, 0, 2.7, 0, 0, 0, 2.7, 0, 0, 0)

[node name="rock_tallJ" parent="GameManager" instance=ExtResource("4_nxtc6")]
transform = Transform3D(1.53, 0, 0, 0, 1.53, 0, 0, 0, 1.53, 1.74049, 0, -2.57146)

[node name="rock_tallJ3" parent="GameManager" instance=ExtResource("4_nxtc6")]
transform = Transform3D(1.53, 0, 0, 0, 1.53, 0, 0, 0, 1.53, -4.05838, 0, 0.0321608)

[node name="rock_tallJ4" parent="GameManager" instance=ExtResource("4_nxtc6")]
transform = Transform3D(1.53, 0, 0, 0, 1.53, 0, 0, 0, 1.53, -3.64407, 0, -3.81133)

[node name="rock_tallJ5" parent="GameManager" instance=ExtResource("4_nxtc6")]
transform = Transform3D(1.53, 0, 0, 0, 1.53, 0, 0, 0, 1.53, -0.856837, 0.0162244, 2.84081)

[node name="CameraController" type="Node3D" parent="."]
script = ExtResource("3_camera")

[node name="Camera3D" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 0.996195, 0.087156, 0, -0.087156, 0.996195, 0, 1.2, 3)
near = 0.1
far = 100.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)
shadow_enabled = true

[node name="Ground" parent="." instance=ExtResource("2_ground")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="StatusPanel" type="Panel" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -150.0
offset_right = 350.0
offset_bottom = -10.0

[node name="StatusLabel" type="RichTextLabel" parent="UI/StatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Hunter Drone AI - LangGraph Edition
Status: Initializing...
Controls: R to restart, Space to pause/resume, ESC to exit
Camera: 3rd Person Drone View"

[node name="AIReasoningPanel" type="Panel" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_right = -10.0
offset_bottom = 200.0

[node name="AIReasoningLabel" type="RichTextLabel" parent="UI/AIReasoningPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "AI Reasoning:
Simulated AI active
Strategic interception mode"
